--- a/resources/assets/css/app.css
+++ b/resources/assets/css/app.css
@@ -13,6 +13,18 @@
 .ais-highlight em{
 	@apply text-max-secondary;
 }
+.VueCarousel-wrapper{
+	@apply .bg-white .border .shadow;
+}
+
+@responsive {
+	.order-0 { order: 0; }
+	.order-1 { order: 1; }
+	.order-2 { order: 2; }
+	.order-3 { order: 3; }
+	.order-4 { order: 4; }
+	.order-5 { order: 5; }
+}
 
 @tailwind utilities;
 
