--- a/resources/assets/css/app.css
+++ b/resources/assets/css/app.css
@@ -2,8 +2,9 @@
 @import "vendor/tabs";
 @import "vendor/transitions";
 @tailwind preflight;
+@tailwind components;
 
-.category p, .category ul{
+.category p, .category ul, .product p, .product ul{
 	@apply .mb-4;
 }
 .category li{
